@startuml

class Ticket {
  - id
  - prix

  + opération1(params): returnType
  - opération2(params)
  - opération3()
}

class Concert {
  - id:int
  - prix:int
  - date:date
  - lieu:string
  - capacity:int
  + opération1(params): returnType
  - opération2(params)
  - opération3()
}

class User {
  - id:int
  - nom:string
  - prenom:string
  - code postal:string
  - email:string
  - tel:string
  - password:string
  - age:int
  - sexe:[Homme, Femme]
  + opération1(params): returnType
  - opération2(params)
  - opération3()
}

class Organisateur {
  - id:int
  + opération1(params): returnType
  - opération2(params)
  - opération3()
}

class Artiste {
  - id
  - Nom
  - Prenom
  - Biographie
  + opération1(params): returnType
  - opération2(params)
  - opération3()
}


Concert "1" -- "*" Ticket
User "1" -- "*" Ticket
Concert "1" -- "1" Artiste
Organisateur "1" -- "*" Concert
Organisateur --|> User


@enduml